--- a/wally/.gitignore
+++ b/wally/.gitignore
@@ -1,4 +1,5 @@
-test_out/
+# pyenv
+.python-version
 
 # Python
 
@@ -68,9 +69,6 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
-
-# pyenv
-#.python-version
 
 # celery beat schedule file
 celerybeat-schedule
