--- a/howler/requirements.txt
+++ b/howler/requirements.txt
@@ -8,10 +8,10 @@ elasticsearch==5.0.1
 elasticsearch-dsl==5.0.0
 Fabric3==1.12.post1
 paramiko==1.17.2
-psycopg2==2.6.2
+psycopg2==2.7
 pycparser==2.17
 pycrypto==2.6.1
 python-dateutil==2.6.0
 six==1.10.0
 urllib3==1.19.1
--e git+ssh://lukas@gerrit.spicy.co-conv.jp:29418/lukas-sandbox.git#egg=wally&subdirectory=wally
+-e git+ssh://git@github.com/Luke31/lukas-sandbox.git#egg=wally&subdirectory=wally
