--- a/howler/requirements.txt
+++ b/howler/requirements.txt
@@ -14,4 +14,4 @@ pycrypto==2.6.1
 python-dateutil==2.6.0
 six==1.10.0
 urllib3==1.19.1
--e git+ssh://git@github.com/Luke31/lukas-sandbox.git#egg=wally&subdirectory=wally
+-e git+https://github.com/Luke31/lukas-sandbox.git#egg=wally&subdirectory=wally
