Update Dockerfile and site-config

--- a/howler/howler_site.conf
+++ b/howler/howler_site.conf
@@ -1,5 +1,8 @@
-WSGIPythonPath /var/www/howler/howler
 
+
+
+
+WSGIPythonPath /var/www/howler
 <VirtualHost *:80>
         # The ServerName directive sets the request scheme, hostname and port that
         # the server uses to identify itself. This is used when creating
@@ -8,12 +11,12 @@ WSGIPythonPath /var/www/howler/howler
         # match this virtual host. For the default virtual host (this file) this
         # value is not decisive as it is used as a last resort host regardless.
         # However, you must set it for any further virtual host explicitly.
-        #ServerName www.example.com
+        #ServerName www.test.com
 
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/howler
 
-        Alias /static "/var/www/howler/static"
+        Alias /static "/var/www/howler/public/static"
 
         WSGIScriptAlias / /var/www/howler/howler/wsgi.py
 
