--- a/howler/Dockerfile
+++ b/howler/Dockerfile
@@ -1,9 +1,10 @@
-FROM httpd:2.4
+FROM debian:9.6
 MAINTAINER Negi Corp
 RUN apt-get update
-RUN apt-get -y install git python3 python3-dev libapache2-mod-wsgi-py3 libpq-dev libffi-dev curl gnupg
+RUN apt-get -y install git apache2 apache2-utils python3 python3-dev libapache2-mod-wsgi-py3 libpq-dev libffi-dev curl gnupg apache2-dev
 RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - && apt-get install -y nodejs npm
 RUN npm install -g bower
+RUN echo '{ "allow_root": true }' > /root/.bowerrc
 RUN rm /usr/bin/python
 
 RUN ln /usr/bin/python3 /usr/bin/python
@@ -17,16 +18,14 @@ RUN mkdir -p ~/.ssh && ssh-keyscan -t rsa github.com > ~/.ssh/known_hosts
 RUN cd /var/www/howler && pwd && CFLAGS="-Wno-narrowing" pip install -r requirements.txt
 ADD . /var/www/howler/
 
-ADD ./howler.conf /etc/apache2/sites-available/000-default.conf
+ADD howler_site.conf /etc/apache2/sites-available/000-default.conf
 
-RUN cd /var/www/howler && python ./manage.py bower install \
+#RUN sed -i 's,#LoadModule rewrite_module modules/mod_rewrite.so,LoadModule rewrite_module modules/mod_rewrite.so,g' /usr/local/apache2/conf/httpd.conf
+
+RUN cd /var/www/howler && python ./manage.py bower install && \
     django-admin compilemessages && \
-    touch wsgi.py
-#python ./manage.py collectstatic -v0 --noinput && \
-#python ./manage.py migrate && \
-#RUN /etc/init.d/apache2 restart
-
-#COPY templates/index_dashboard.html /var/www/html/
-#CMD ["httpd-foreground"]
-#CMD ["sh"]
+    touch wsgi.py && \
+    python ./manage.py collectstatic -v0 --noinput
+#RUN cd /var/www/howler && python ./manage.py migrate && \
 EXPOSE 80 3500
+CMD ["apache2ctl", "-D", "FOREGROUND"]
