--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,1 +1,7 @@
-FROM postgres:11.1
+FROM postgres:9.4.9
+
+COPY ./create_db_docker.sh /docker-entrypoint-initdb.d/
+COPY ./database_schema.schema /docker-entrypoint-initdb.d/
+#COPY ./municipalities_import.csv /docker-entrypoint-initdb.d/
+#COPY ./object_types_import.csv /docker-entrypoint-initdb.d/
+
