--- a/howler/Dockerfile
+++ b/howler/Dockerfile
@@ -28,4 +28,4 @@ RUN cd /var/www/howler && python ./manage.py bower install && \
     python ./manage.py collectstatic -v0 --noinput
 #RUN cd /var/www/howler && python ./manage.py migrate && \   # Run this command after container started
 EXPOSE 80 3500
-CMD ["apache2ctl", "-D", "FOREGROUND"]
+CMD python /var/www/howler/manage.py migrate && apache2ctl -D FOREGROUND
