--- a/elasticsearch/elasticsearch.yml
+++ b/elasticsearch/elasticsearch.yml
@@ -14,13 +14,13 @@
 #
 # Use a descriptive name for your cluster:
 #
-#cluster.name: elasticsearch
+cluster.name: wally-prod
 #
 # ------------------------------------ Node ------------------------------------
 #
 # Use a descriptive name for the node:
 #
-#node.name: node-1
+node.name: node-wally-1
 #
 # Add custom attributes to the node:
 #
@@ -40,7 +40,7 @@
 #
 # Lock the memory on startup:
 #
-#bootstrap.memory_lock: true
+bootstrap.memory_lock: true # no swapping
 #
 # Make sure that the heap size is set to about half the memory available
 # on the system and that the owner of the process is allowed to use this
@@ -52,11 +52,13 @@
 #
 # Set the bind address to a specific IP (IPv4 or IPv6):
 #
-#network.host: 192.168.0.1
+# network.host: elasticsearch
 #
 # Set a custom port for HTTP:
 #
-#http.port: 9200
+network.bind_host: ["elasticsearch", "localhost"] # Also enable access EL locally
+network.publish_host: elasticsearch
+http.port: 9200
 #
 # For more information, consult the network module documentation.
 #
@@ -86,4 +88,3 @@
 # Require explicit names when deleting indices:
 #
 #action.destructive_requires_name: true
-
