Add filebeat and dummy IRC log

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,4 +57,15 @@ services:
     network_mode: bridge
     links:
      - elasticsearch
+  
+  filebeat:
+    build:
+      context: ./filebeat/
+      dockerfile: Dockerfile
+    hostname: filebeat
+    network_mode: bridge
+    links:
+     - logstash
+    volumes:
+     - ./datain:/datain
 
