--- a/filebeat/Dockerfile
+++ b/filebeat/Dockerfile
@@ -1,4 +1,8 @@
 FROM elastic/filebeat:5.6.15
 
-COPY filebeat.yml /etc/filebeat/
+COPY filebeat.yml /usr/share/filebeat/filebeat.yml
+USER root
+RUN chown filebeat /usr/share/filebeat/filebeat.yml
+RUN chmod go-w /usr/share/filebeat/filebeat.yml
+USER filebeat
 
