--- a/logstash/10-irc-log-filter.conf
+++ b/logstash/10-irc-log-filter.conf
@@ -7,7 +7,7 @@ filter {
     grok {
         match => {
             "message" => [ "%{HOUR:hour}%{MINUTE:minute}%{SECOND:second} \<\#%{DATA:channel}:%{USERNAME:username}\> %{GREEDYDATA:msg}",
-                           "%{HOUR:hour}%{MINUTE:minute}%{SECOND:second} \>\#%{DATA:channel}\< \*%{DATA:username}\* %{GREEDYDATA:msg}"] 
+                           "%{HOUR:hour}%{MINUTE:minute}%{SECOND:second} \<\#%{DATA:channel}:%{DATA:username}\> %{GREEDYDATA:msg}"] 
         }
         # break_on_match => false
     }
